Action Editor refresh missing when a keyframe is inserted in 3D view #38105

Closed
opened 2014-01-07 13:55:46 +01:00 by Thomas Beck · 7 comments
Member

System Information
Linux 64, 16gb, 2*gtx560ti

Blender Version
Current and all before

Short description of error
When I insert a keyframe (on a location keying set f.e.) in the 3D-view and I got an action editor open then the action datablock is still not changed (displaying only the button "new"). When I enter the action editor with the mouse then I got a refresh event and the action is being displayed correctly.

I will investigate it myself...

**System Information** Linux 64, 16gb, 2*gtx560ti **Blender Version** Current and all before **Short description of error** When I insert a keyframe (on a location keying set f.e.) in the 3D-view and I got an action editor open then the action datablock is still not changed (displaying only the button "new"). When I enter the action editor with the mouse then I got a refresh event and the action is being displayed correctly. I will investigate it myself...
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Thomas Beck self-assigned this 2014-01-07 13:55:46 +01:00
Author
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions
Author
Member

This patch should handle the missing actions

This patch should handle the missing actions

This issue was referenced by blender/blender-addons-contrib@fa88c7ffae

This issue was referenced by blender/blender-addons-contrib@fa88c7ffae0cfca83b8ec3daaba6c3cc39f9ae34

This issue was referenced by fa88c7ffae

This issue was referenced by fa88c7ffae0cfca83b8ec3daaba6c3cc39f9ae34
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Closed by commit fa88c7ffae.

Closed by commit fa88c7ffae.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38105
No description provided.