source/blender/editors/space_action/space_action.c
@@ -450,8 +450,11 @@ static void action_listener(bScreen *UNUSED(sc), ScrArea *sa, wmNotifier *wmn)
 	}
 }
 
-static void action_header_area_listener(bScreen *UNUSED(sc), ScrArea *UNUSED(sa), ARegion *ar, wmNotifier *wmn)
+static void action_header_area_listener(bScreen *UNUSED(sc), ScrArea *sa, ARegion *ar, wmNotifier *wmn)
 {
+
+	SpaceAction *saction = (SpaceAction *)sa->spacedata.first;
+
 	/* context changes */
 	switch (wmn->category) {
 		case NC_SCENE:
@@ -465,7 +468,16 @@ static void action_header_area_listener(bScreen *UNUSED(sc), ScrArea *UNUSED(sa)
 			if (wmn->action == NA_RENAME)
 				ED_region_tag_redraw(ar);
 			break;
+		case NC_ANIMATION:
+			switch (wmn->data) {
+				case ND_KEYFRAME:
+					saction->flag |= SACTION_TEMP_NEEDCHANSYNC;
+					ED_region_tag_redraw(ar);
+					break;
+			}
+			break;
 	}
+
 }
 
 static void action_refresh(const bContext *C, ScrArea *sa)
